--- a/css/par.css
+++ b/css/par.css
@@ -18,7 +18,6 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
-    background-color: rgb(21, 12, 5);
 }
 header .logo{
     width: 100px;
@@ -44,12 +43,12 @@ header nav ul li a{
     display: block;
 }
 header nav ul li a:hover{
-    color: rgb(255, 0, 4);
-    border-top: #f40808 3px solid; 
+    color: rgb(0, 0, 0);
+    border-top: #000000 3px solid; 
     transition: color 0.5s ease;
 }
 body{
-    background-color: rgba(186, 36, 39, 0.951);
+    background-image: url(../images/background.jpg);
 }
 .main_img{
     width: 100%;
@@ -61,7 +60,7 @@ body{
     display: flex;
     justify-content: space-around;
     margin: 10%;
-    background-color: bisque;
+    background-color:rgb(216, 113, 64);
     padding: 25px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75); 
     border-radius: 10px;
@@ -81,7 +80,7 @@ body{
     display: flex;
     justify-content: space-around;
     margin: 10%;
-    background-color: bisque;
+    background-color:rgb(213, 116, 64);
     padding: 25px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75); 
     border-radius: 10px;
@@ -104,45 +103,13 @@ body{
 header label{
     display: none;
 }
-@media screen and (max-width: 700px) {
-    header{
-        padding: 20px;
 
-    }
-    header label{
-        display: initial;
-        position: relative;
-        color: aliceblue;
-    }
-    header nav{
-        position: absolute;
-        top: 30%; left: 0; right: 0;
-        background: rgb(18, 18, 18);
-        border-top: 1px solid black;
-        display: none;
-        margin: 0;
-    }
-    Header nav ul li{
-        width: 100%;
-    }
-    header #menu:checked ~ nav{
-        display: block;
-    }
-    .birth, .Fresh{
-        display: block;
-        margin: auto;
-        margin-top: 15px;
-    }
-    .birth-text{
-        width: 100%;
-        height: 100%;
-    }
     .footer{
         display: block;
         margin: auto;
         margin-top: 15px;
     }
-}
+
 footer{
     background-color: rgb(21, 12, 5);
     color: aliceblue;
