--- a/css/wed.css
+++ b/css/wed.css
@@ -19,7 +19,6 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
-    background-color: rgb(32, 85, 85);
 }
 header .logo{
     width: 100px;
@@ -40,16 +39,16 @@ header nav ul li{
 header nav ul li a{
     font-size: 18px;
     font-weight: 500;
-    color: #000;
+    color: #ffffff;
     display: block;
 }
 header nav ul li a:hover{
-    color: rgb(11, 204, 136);
+    color: rgb(0, 0, 0);
     border-top: #000 3px solid; 
     transition: border-top 0.5s ease;
 }
 body{
-    background-color: rgb(11, 204, 136);
+    background-image: url(../images/background.jpg);
 }
 .main_img{
     width: 100%;
@@ -74,7 +73,7 @@ body{
 .in{
     width: 30%;
     text-align: center;
-    background-color: rgb(32, 85, 85);
+    background-color: rgb(213, 116, 64);
     border-radius: 10px;
 
     box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
@@ -84,7 +83,7 @@ body{
 .out{
     width: 30%;
     text-align: center;
-    background-color: rgb(32, 85, 85);
+    background-color: rgb(213, 116, 64);
     border-radius: 10px;
     
     box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
@@ -98,7 +97,7 @@ header label{
     display: none;
 }
 footer{
-    background-color: rgb(32, 85, 85);
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
     text-align: center;
     padding: 20px;
