--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@ form h1{
     font-family: cursive;
 }
 form div{
-    margin: 25px;;
+    margin: 25px;
 }
 #menu{
     display: none;
@@ -323,26 +323,13 @@ header label{
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
-    padding: 20px;
-    margin-top: 5%;
-    height: 150px;
+    
  }
     footer p{
         margin: 0;
     }
-    footer a{
-        color: white;
-        text-decoration: none;
-    }
-    footer a:hover{
-        color: rgb(204, 204, 11);
-    }
-    footer ul{
-        list-style: none;
-        
-    }
 .footer{
     display: flex;
     justify-content: space-evenly;
-    margin: 5%;
+    
 }
